<resources>
    <string name="app_name_prod">Optima One 2.8.3</string>
    <string name="app_name_test">Optima One Test 2.8.3</string>
    <string name="app_version">2.8.3</string>
    <string name="app_name">OptimaOne</string>
    <string name="name">Nome\nCognome</string>
    <string name="data_di_nascita">Data di\nnascita</string>
    <string name="canone">Canone\nmese</string>
    <string name="data_create">Data\ncreazione</string>
    <string name="del_msg">Sicuro di voler cancellare l\u0027offerta?</string>
    <string name="modifica_regime_fiscale">Modifica Regime Fiscale</string>
    <string name="sfd_title">Salva</string>
    <string name="sfd_go_up_text">Annulla</string>
    <string name="sfd_new_dir_text">Nuova cartella</string>
    <string name="ok">OK</string>
    <string name="sfd_confirmation_title">Confermi</string>
    <string name="sfd_confirmation_message">Solvrascrivere il file?</string>
    <string name="sfd_btn_yes">Si</string>
    <string name="done">Done</string>
    <string name="sfd_btn_no">No</string>
    <string name="send_contract_message">Report salvato. Vuoi inviarlo?</string>
    <string name="send_yes">Invia report</string>
    <string name="send_no">Annulla</string>
    <string name="new_version_message">Una nuova versione è disponibile per il download. Vuoi scaricarla?</string>
    <string name="euro">€</string>
    <string name="value_with_euro">%s €</string>
    <string name="ragione_sociale">Ragione sociale</string>
    <string name="piva">P.IVA/CF</string>
    <string name="comune">Comune</string>
    <string name="canone_mensile">Canone\nmensile</string>
    <string name="id_consumer">Id testbusiness</string>
    <string name="tensioneBT">BT</string>
    <string name="tensioneMT">MT</string>
    <string name="tipoContatoreIntegratore">Monorario</string>
    <string name="tipoContatoreFasciaOraria">Fascia oraria</string>
    <string name="fiscale_civile">Civile</string>
    <string name="fiscale_industriale">Industriale</string>
    <string name="codice_pmc_ps">Codice tariffa\n%s</string>
    <string name="codice_prezzo_mancato">Tariffa sotto soglia\n%s</string>
    <string name="codice_prezzo_sforamento">Tariffa oltre soglia\n%s</string>
    <string name="centro_commerciale">Centro commerciale</string>
    <string name="loginError">Login fallito: verificare username o password</string>
    <string name="loginErrorConnection">Login fallito: verificare che la connessione funzioni correttamente</string>
    <string name="main_logo">Main logo</string>
    <string name="p_iva_cf">P.IVA/CF</string>
    <string name="indirizzo_e_mail_pec">Indirizzo e-mail/PEC</string>
    <string name="convenzione">Convenzione</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="dati_di_nascita">Data di nascita</string>
    <string name="sesso">Sesso</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="comune_di_nascita">Comune di nascita</string>
    <string name="comune_di_fornitura">Comune di fornitura</string>
    <string name="indirizzo_di_fornitura">Indirizzo di fornitura</string>
    <string name="cap">CAP</string>
    <string name="codice_fiscale">Codice fiscale</string>
    <string name="generate">Generate</string>
    <string name="tipologia_cliente">Tipologia Cliente</string>
    <string name="residenziale">residenziale</string>
    <string name="non_residenziale">non residenziale</string>
    <string name="configura_offerta">Configura offerta</string>
    <string name="visualizza_archivio">Visualizza archivio</string>
    <string name="tipologia_contratto">Tipologia contratto</string>
    <string name="offerta_commerciale_per">Offerta commerciale per:</string>
    <string name="business">Business</string>
    <string name="consumer">Consumer</string>
    <string name="altri_usi">Altri usi</string>
    <string name="domestico">Domestico</string>
    <string name="condominio">Condominio</string>
    <string name="activation_cost_lable_consumer">Rata costo di attivazione (IVA inclusa):</string>
    <string name="activation_cost_lable_business">Costo di attivazione una tantum</string>
    <string name="ragione_sociale_p">Ragione Sociale:</string>
    <string name="partita_iva_p">Partita IVA:</string>
    <string name="costo_di_attivazione_p">Costo di attivazione</string>
    <string name="bonus_conto_relax_p">Bonus Conto Relax:</string>
    <string name="nome_e_cognome_p">Nome e Cognome:</string>
    <string name="codice_fiscale_p">Codice fiscale:</string>
    <string name="comune_p">Comune:</string>
    <string name="tipologia_cliente_p">Tipologia cliente:</string>
    <string name="canone_iva_inclusa_p">Canone mensile \n VitaMia \n (IVA inclusa):</string>
    <string name="canone_iva_esclusa_p">Canone mensile \n VitaMia \n (IVA esclusa):</string>
    <string name="rata_costo_di_attivazione_iva_inclusa_p">Rata costo di attivazione \n(IVA inclusa):</string>
    <string name="canone_p">Canone mensile \n VitaMia \n (IVA esclusa)</string>
    <string name="chat">Chart</string>
    <string name="esci">Esci</string>
    <string name="esporta">Esporta</string>
    <string name="per_le_tue_abitudini_di_consumo_lofferta_elaborata_di">Per le tue abitudini di consumo, l’offerta elaborata è di:</string>
    <string name="canone_mensile_nn">Canone mensile</string>
    <string name="iva_esclusa">(IVA esclusa)</string>
    <string name="iva_inclusa">(IVA inclusa)</string>
    <string name="xx">XX</string>
    <string name="bonus_conto_relax">Bonus Conto Relax:</string>
    <string name="esempio_di_canone_mensile_iva_inclusa">Esempio di canone mensile IVA inclusa</string>
    <string name="dettaglio">dettaglio</string>
    <string name="archivia">archivia</string>
    <string name="modifica">modifica</string>
    <string name="bmodifica">Modifica</string>
    <string name="calcola">calcola</string>
    <string name="euro_t">€\t</string>
    <string name="componi_offerta">Componi offerta</string>
    <string name="mobile">Mobile</string>
    <string name="offerta_base">Offerta base</string>
    <string name="offerta_alternative_voce_e_dati">Offerta alternativa\nVoce e dati</string>
    <string name="offerta_alternativa_solo_dati">Offerta alternativa\nSolo dati</string>
    <string name="sim_in_promozione">SIM in promozione</string>
    <string name="sconto">Sconto</string>
    <string name="costo_mobile">Costo\nMobile\n(IVA inclusa)</string>
    <string name="costo_mobile_scontata">Costo Mobile\nscontato\n(IVA inclusa)</string>
    <string name="tipo_servizio">Tipo Servizio</string>
    <string name="offerta_1">Offerta 1</string>
    <string name="offerta_2">Offerta 2</string>
    <string name="offerta_3">Offerta 3</string>
    <string name="energia">Energia</string>
    <string name="gas">Gas</string>
    <string name="telefonia_fissa">Telefonia Fissa</string>
    <string name="internet">Internet</string>
    <string name="default_email">Default email:</string>
    <string name="salva">Salva</string>
    <string name="annulla">Annulla</string>
    <string name="chart">Chart</string>
    <string name="pod1">POD1</string>
    <string name="router">Router:</string>
    <string name="router_p">Router</string>
    <string name="acquisto_noleggio">acquisto/noleggio\t</string>
    <string name="ip_aggiuntivi">IP statici:</string>
    <string name="linea_solo_dati">Linea solo dati:</string>
    <string name="no">NO</string>
    <string name="categoria_duso">Categoria d’uso:</string>
    <string name="giorni_esclusi_sabati_domeniche_e_festivita_nazionali">"5 giorni (esclusi sabati, domeniche e festività nazionali)"</string>
    <string name="classe_di_prelievo">Classe di prelievo:</string>
    <string name="riscaldamento_uso_cottura_cibi_produzione_di_acqua_calda_sanitaria">"Riscaldamento + uso cottura cibi e/o produzione di acqua calda sanitaria"</string>
    <string name="aggiungi_servizio">Aggiungi servizio</string>
    <string name="servizi_da_aggiungere">Servizi da aggiungere</string>
    <string name="elettricita">Elettricità</string>
    <string name="con_fattura">con fattura</string>
    <string name="senza_fattura">senza fattura</string>
    <string name="informazioni_abitazione">Informazioni abitazione</string>
    <string name="abitanti_della_casa">abitanti_della_casa</string>
    <string name="tipologia_abitazione">Tipologia abitazione</string>
    <string name="superficie_abitazione">Superficie abitazione (mq)</string>
    <string name="periodo_di_uso_e_abitazione_della_casa">Periodo di uso e abitazione della casa\t</string>
    <string name="anno_di_costruzione">Anno di costruzione\t</string>
    <string name="ristrutturazione">Ristrutturazione</string>
    <string name="tipologia_di_isolamento">Tipologia di isolamento</string>
    <string name="riscaldamento_a_pavimento">Riscaldamento a pavimento</string>
    <string name="vetri_doppi">Vetri doppi</string>
    <string name="tipologia_di_caldaia_tradizionale_a_condensazione">Tipologia di caldaia (tradizionale, a condensazione)</string>
    <string name="wlr">WLR:</string>
    <string name="si">Si</string>
    <string name="numero_linee">Numero linee:</string>
    <string name="twelve">1</string>
    <string name="intervallo_di_tempo_da">Intervallo di tempo : da</string>
    <string name="a">a</string>
    <string name="smc">Smc</string>
    <string name="f1_f0">F1/F0:\t</string>
    <string name="f3">F3:\t</string>
    <string name="f2">F2:\t</string>
    <string name="new_text">New Text</string>
    <string name="asdasdasd_textasdasdasdas">asdasdasd Textasdasdasdas</string>
    <string name="san_valentino_in_abruzzo_citeriore">San Valentino in Abruzzo Citeriore</string>
    <string name="bnon_residenziale">Non residenziale\t</string>
    <string name="potenza_contatore">Potenza contatore</string>
    <string name="profilo_di_utilizzo">Profilo di utilizzo</string>
    <string name="z_kw">3Kw</string>
    <string name="asdasdasd_textasdasdasdasd_asdjaskld_askdjaskldjkal">asdasdasd Textasdasdasdasd asdjaskld  askdjaskldjkal</string>
    <string name="c_xx_xx">€[xx,xx]</string>
    <string name="energia_elettrica">Energia elettrica</string>
    <string name="consumo_mese">Consumo mese:</string>
    <string name="opzione_tarrifaria">Opzione tarrifaria</string>
    <string name="potenza">Potenza</string>
    <string name="xx_p">[XX%]</string>
    <string name="gas_metano">Gas metano</string>
    <string name="regime_fiscale">Regime Fiscale</string>
    <string name="minuti_mese_verso_fisso">Minuti mese verso fisso:\t</string>
    <string name="minuti_mese_verso_mobile">Minuti mese verso mobile:\t</string>
    <string name="numero_di_linee">Numero di linee:</string>
    <string name="tariffa_oltre_soglia">Tariffa oltre soglia</string>
    <string name="energia_elettrica_pod">Energia elettrica POD 14</string>
    <string name="tariffa_extra_soglia">Tariffa extra soglia</string>
    <string name="scegli_il_tipo_di_offerta">Scegli il tipo di offerta</string>
    <string name="offerte_per_servizio">Offerte per servizio</string>
    <string name="offerta_unica">Offerta unica</string>
    <string name="continua">Continua</string>
    <string name="operatore_p">Operatore:</string>
    <string name="altro_operatore">Altro operatore</string>
    <string name="rete_p">Rete:</string>
    <string name="nacked">NACKED</string>
    <string name="linea_p">Linea:</string>
    <string name="isdn_pra_con_gnr_selezione_passante">ISDN PRA con GNR Selezione Passante</string>
    <string name="servizi_aggiuntivi_p">Servizi aggiuntivi:</string>
    <string name="numerazione_agguintiva_p">Numerazione agguintiva:</string>
    <string name="categoria_duso_p">Categoria d’uso:</string>
    <string name="energy">Energy</string>
    <string name="voce">Voce</string>
    <string name="adsl_header">Tecnologia desiderata</string>
    <string name="device">Device</string>
    <string name="total">Total</string>
</resources>