<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout">

    <TextView
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/energia_elettrica_pod"
        android:id="@+id/name"
        android:background="@drawable/blue_dettaglio_table_cell"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tariffa_oltre_soglia"
        android:id="@+id/sogliaPs"
        android:background="@drawable/white_dettaglio_table_cell"
        android:textColor="@color/black"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="10dp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tariffa_extra_soglia"
        android:id="@+id/sogliaPMC"
        android:background="@drawable/white_dettaglio_table_cell"
        android:textColor="@color/black"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="10dp" />
</LinearLayout>